# chargily-pay-python

./: .gitignore  Makefile  README.md  dev_requirements.txt  makefile  pyproject.toml
.github/workflows/: python-publish.yml
docs/: usage.md
docs/examples/: django.md
docs/reference/: api.md  entity.md
src/chargily_pay/: __init__.py  api.py  entity.py  settings.py
tests/: test_api.py
